# DEEP-PPI

./: .gitignore  README.md  pyproject.toml
DEEP-PPI/: data.py  main.py  model.py
prot2prot/: main.py
