[tool.poetry]
name = "prot2prot"
version = "0.1.0"
description = ""
authors = ["SvenStahlmann <stahlmann.sven.de@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
transformers = "^4.28.1"
torchmetrics = "^0.11.4"
black = "^23.3.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
lightning = "^2.0.1.post0"
fastapi = ">=0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
